--- a/practice.html
+++ b/practice.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>B5 Forms</title>
+<title>REGISTER</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -21,7 +21,7 @@ padding: 13px;
 <body>
 
 <div class="container mt-3">
-<h2>Creating Horizontal Form Layout</h2>
+<h2>REGISTER</h2>
 <form>
 
 </form>
